--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "get-audio-duration": "^4.0.1",
     "lucide-react": "^0.344.0",
     "multer": "1.4.5-lts.1",
     "react": "^18.3.1",
