--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "preview": "concurrently \"npm run preview:client\" \"npm run dev:server\"",
+    "clean": "node scripts/cleanup.js",
+    "dev": "npm run clean && concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "preview": "npm run clean && concurrently \"npm run preview:client\" \"npm run dev:server\"",
     "dev:client": "vite",
     "dev:server": "node server/index.js",
     "build": "vite build",
@@ -24,6 +25,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@remotion/bundler": "^4.0.252",
     "@remotion/cli": "^4.0.252",
