Queue is working

--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@remotion/bundler": "^4.0.252",
-    "@remotion/cli": "^4.0.252",
-    "@remotion/media-utils": "^4.0.252",
-    "@remotion/player": "^4.0.252",
-    "@remotion/studio": "^4.0.252",
+    "@remotion/bundler": "^4.0.260",
+    "@remotion/cli": "^4.0.260",
+    "@remotion/media-utils": "^4.0.260",
+    "@remotion/player": "^4.0.260",
+    "@remotion/renderer": "^4.0.260",
+    "@remotion/studio": "^4.0.260",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "get-audio-duration": "^4.0.1",
     "lucide-react": "^0.344.0",
