--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,31 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "/server/index.js",
-            "use": "@vercel/node"
+      {
+        "src": "server/index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "buildCommand": "npm run build",
+          "outputDirectory": "dist"
         }
+      }
     ],
     "routes": [
-        {
-            "src": "/api/*",
-            "dest": "/server/index.js"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "server/index.js"
+      },
+      {
+        "src": "/assets/(.*)",
+        "dest": "/dist/assets/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/dist/$1"
+      }
     ]
-}
+  }
