--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "preview": "npm run clean && concurrently \"npm run preview:client\" \"npm run dev:server\"",
     "dev:client": "vite",
-    "dev:server": "node server/index.js",
+    "dev:server": "nodemon server/index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview:client": "vite preview",
@@ -42,6 +42,7 @@
     "get-audio-duration": "^4.0.1",
     "lucide-react": "^0.344.0",
     "multer": "1.4.5-lts.1",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^2.1.7",
