Caption testing done

--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@remotion/animation-utils": "4.0.260",
     "@remotion/bundler": "^4.0.260",
+    "@remotion/captions": "4.0.273",
     "@remotion/cli": "^4.0.260",
     "@remotion/install-whisper-cpp": "4.0.260",
+    "@remotion/layout-utils": "4.0.273",
     "@remotion/media-utils": "^4.0.260",
     "@remotion/player": "^4.0.260",
     "@remotion/renderer": "^4.0.260",
@@ -53,7 +56,7 @@
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.1.5",
-    "remotion": "^4.0.251",
+    "remotion": "^4.0.260",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
