--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@remotion/animation-utils": "4.0.260",
     "@remotion/bundler": "^4.0.260",
@@ -52,6 +51,7 @@
     "get-audio-duration": "^4.0.1",
     "lucide-react": "^0.344.0",
     "multer": "1.4.5-lts.1",
+    "next-themes": "^0.4.5",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -60,6 +60,7 @@
     "remotion": "^4.0.260",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
