--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "preview": "npm run clean && concurrently \"npm run preview:client\" \"npm run dev:server\"",
     "dev:client": "vite",
-    "dev:server": "node server/index.js",
+    "dev:server": "nodemon server/index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview:client": "vite preview",
@@ -30,6 +30,7 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@remotion/animation-utils": "4.0.260",
     "@remotion/bundler": "^4.0.260",
@@ -42,7 +43,7 @@
     "@remotion/player": "^4.0.260",
     "@remotion/renderer": "^4.0.260",
     "@remotion/studio": "^4.0.260",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -52,6 +53,7 @@
     "lucide-react": "^0.344.0",
     "multer": "1.4.5-lts.1",
     "next-themes": "^0.4.5",
+    "node-fetch": "2",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
