--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "clean": "node scripts/cleanup.js",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\" ",
     "preview": "npm run clean && concurrently \"npm run preview:client\" \"npm run dev:server\"",
     "dev:client": "vite",
     "dev:server": "nodemon server/index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview:client": "vite preview",
-    "init": "tailwindcss init"
+    "init": "tailwindcss init",
+    "docker": "docker run -p 8880:8880 ghcr.io/remsky/kokoro-fastapi-cpu:v0.2.2"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
