--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "node scripts/cleanup.js",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\" ",
     "preview": "npm run clean && concurrently \"npm run preview:client\" \"npm run dev:server\"",
-    "dev:client": "vite",
+    "dev:client": "vite --host 0.0.0.0",
     "dev:server": "nodemon server/index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
