--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "get-audio-duration": "^4.0.1",
     "lucide-react": "^0.344.0",
-    "multer": "1.4.5-lts.1",
+    "multer": ">=2.0.0",
     "next-themes": "^0.4.5",
     "node-fetch": "2",
     "nodemon": "^3.1.9",
