--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /out/*
 server/subtitle/whisper.cpp
 /data/*
+package-lock.json
 
 # Logs
 *.mp4
@@ -31,3 +32,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+package-lock.json
