feat: add Prompt Filler page and integrate with sidebar
- Added a new page for filling prompts with dynamic placeholders.
- Integrated the new page into the app's routing.
- Updated the sidebar to include a link to the Prompt Filler page with a new icon.
- Installed react-markdown for rendering markdown in the preview.
- Added Tailwind CSS typography plugin for improved styling.
- Updated package.json and tailwind.config.js accordingly.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.1.5",
     "remotion": "^4.0.260",
@@ -70,6 +71,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.11.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
